order systemd unit after time-sync.target
domoticz cannot handle time change...

https://github.com/domoticz/domoticz/issues/3371

--- a/domoticz.service
+++ b/domoticz.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Domoticz Home Automation Server
-After=syslog.target network.target
+After=syslog.target network.target time-sync.target
 
 [Service]
 User=domoticz
