use regular config file instead of number of cmdline options

--- a/domoticz.conf
+++ b/domoticz.conf
@@ -1,14 +1,1 @@
-WWW_PORT=8080
-SSL_PORT=8443
-SSLCERT="/var/lib/domoticz/domoticz.pem"
-SSLPASS=""
-SSLMETHOD=""
-SSLOPTIONS=""
-SSLDHPARAM=""
-WWW_ROOT="/usr/share/domoticz/www"
-DBASE="/var/lib/domoticz/domoticz.db"
-USERDATA="/usr/share/domoticz/"
-VERBOSE=0
-LOG="/var/log/domoticz.log"
-LOGLEVEL="1"
-
+DOMOTICZ_CONF=@DOMOTICZ_CONF_DIR@/domoticz.conf
